[tool.poetry]
name = "projectplanning"
version = "0.1.0"
description = ""
authors = ["Lieke van der Heide <liekeheide@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.12"
numpy = "^1.23.3"
scipy = "^1.9.1"
pandas = "^2.0.3"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
